# covid-ipfs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  covid-ipfs.docx
client/: package-lock.json
client/app/: tauri.conf.json
covid-ipfs-client/: package-lock.json  package.json
covid-ipfs-client/app/: Cargo.toml  tauri.conf.json
covid-ipfs-client/app/icons/: summeros.icns
covid-ipfs-client/app/src/: cors.rs  main.rs
covid-ipfs-client/public/: index.html
covid-ipfs-client/src/: App.css  App.tsx
covid-ipfs-server/: Cargo.toml
covid-ipfs-server/src/: main.rs
covid-ipfs-server/src/api/: mod.rs
covid-ipfs-server/src/common/: ipfs.rs  mod.rs  nucleic_enum.rs
covid-ipfs-server/src/domain/dto/: mod.rs  nucleic_acids.rs
covid-ipfs-server/src/service/: mod.rs
src/: main.rs
src/api/: nucleic_api.rs
src/common/: ipfs.rs  mod.rs  result.rs  result_code.rs
src/domain/: mod.rs
src/domain/dto/: nucleic_acids.rs
src/service/: nucleic_service.rs
