[package]
name = "summer-ipfs-demo"
version = "0.1.0"
edition = "2021"
authors = [
"James Zow <jameszow@163.com>",
"Team <team@summeros.org>"
]

[dependencies]
summer-ipfs-client = "0.1.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.2", features = ["full"] }